# xdg-desktop-entry

./: .pre-commit-config.yaml  Cargo.toml  README.md  flake.nix
example/: file.desktop
spec/: desktop-entry-spec-1.5.html
src/: lib.rs
src/serde/: error.rs  ser.rs
