[package]
name = "xdg-desktop-entry"
description = "Library to handle an XDG destop entry file"
repository = "https://github.com/joshuachp/xdg-desktop-entry"
license = "MIT OR Apache-2.0"
version = "0.1.0"
edition = "2021"
keywords = ["xdg"]
categories = ["parser-implementations"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
